Add evaluators for biostatistics prompts

--- a/biostatistics_prompts/02_time_to_event_analysis_coach.prompt.yaml
+++ b/biostatistics_prompts/02_time_to_event_analysis_coach.prompt.yaml
@@ -27,4 +27,7 @@ testData:
       dataset_path: example_dataset_path
     expected: |-
       Section A: conceptual walk-through (bullets). Section B: fenced R code block. Section C: interpretation and next steps (\u2264250 words).
-evaluators: []
+evaluators:
+  - name: Output starts with 'Section A:'
+    string:
+      startsWith: 'Section A:'
