--- a/biostatistics_prompts/11_fda_missing_data_query_response.prompt.yaml
+++ b/biostatistics_prompts/11_fda_missing_data_query_response.prompt.yaml
@@ -35,4 +35,7 @@ testData:
       sap_references: example_sap_references
     expected: |-
       Word-style Markdown outline with H1/H2 sections plus the appendix table.
-evaluators: []
+evaluators:
+  - name: Output starts with '# '
+    string:
+      startsWith: '# '
