--- a/biostatistics_prompts/01_statistical_analysis_plan_generator.prompt.yaml
+++ b/biostatistics_prompts/01_statistical_analysis_plan_generator.prompt.yaml
@@ -39,4 +39,7 @@ testData:
       factors: example_factors
     expected: |-
       Markdown document using H2 headings for each section.
-evaluators: []
+evaluators:
+  - name: Output starts with '##'
+    string:
+      startsWith: '##'
