--- a/biostatistics_prompts/08_inclusion_exclusion_endpoints_sample_size.prompt.yaml
+++ b/biostatistics_prompts/08_inclusion_exclusion_endpoints_sample_size.prompt.yaml
@@ -33,4 +33,7 @@ testData:
       population_details: example_population_details
     expected: |-
       Bullet lists for criteria and endpoints followed by a short sample-size paragraph.
-evaluators: []
+evaluators:
+  - name: Output starts with '- '
+    string:
+      startsWith: '- '
