--- a/bioskills_prompts/02_simulated_clinical_scenario_feedback.prompt.yaml
+++ b/bioskills_prompts/02_simulated_clinical_scenario_feedback.prompt.yaml
@@ -26,6 +26,8 @@ messages:
 testData:
   - vars:
       procedure_notes: example_procedure_notes
-    expected: |-
-      Bullet points followed by a short reflective question.
-evaluators: []
+    expected: "- "
+evaluators:
+  - name: Output starts with a bullet
+    string:
+      startsWith: "- "
