Add output evaluators to agentic coding prompts

--- a/agentic_coding/01_product_brief.prompt.yaml
+++ b/agentic_coding/01_product_brief.prompt.yaml
@@ -32,4 +32,7 @@ testData:
       context_notes: example_context_notes
     expected: |-
       Markdown sections titled **Vision**, **Key Features and Roadmap**, **Overall Architecture**, and **Additional Context**.
-evaluators: []
+evaluators:
+  - name: Output starts with 'Vision'
+    string:
+      startsWith: 'Vision'
