--- a/agentic_coding/05_project_review.prompt.yaml
+++ b/agentic_coding/05_project_review.prompt.yaml
@@ -28,4 +28,7 @@ testData:
   - vars: {}
     expected: |-
       Markdown checklist confirming each step was completed.
-evaluators: []
+evaluators:
+  - name: Output starts with checklist item
+    string:
+      startsWith: '- [ ]'
