Add evaluators to adjudication prompts

--- a/adjudication_prompts/01_real_time_adjudication_dashboard.prompt.yaml
+++ b/adjudication_prompts/01_real_time_adjudication_dashboard.prompt.yaml
@@ -37,4 +37,7 @@ testData:
       - **Section 2:** Dashboard data model (table)
       - **Section 3:** Alert rules (bullets)
       - **Section 4:** Platform recommendations (table)
-evaluators: []
+evaluators:
+  - name: Output includes 'Section 1:'
+    string:
+      contains: 'Section 1:'
