--- a/adjudication_prompts/03_analyze_adjudication_kpis.prompt.yaml
+++ b/adjudication_prompts/03_analyze_adjudication_kpis.prompt.yaml
@@ -36,4 +36,7 @@ testData:
       - **Metrics Summary Table**
       - Embedded charts or download links for each PNG
       - Bullet list of recommendations
-evaluators: []
+evaluators:
+  - name: Output includes 'Metrics Summary Table'
+    string:
+      contains: 'Metrics Summary Table'
