Add test data and evaluators to sterility prompts

--- a/sterility_prompts/01_sterility_validation_protocol_builder.prompt.yaml
+++ b/sterility_prompts/01_sterility_validation_protocol_builder.prompt.yaml
@@ -32,5 +32,15 @@ messages:
       - Include all equations explicitly.
       - Cite each standard or guidance section by clause number.
       - Think through the solution step-by-step internally and reveal only the final protocol.
-testData: []
-evaluators: []
+testData:
+  - vars:
+      device_description: example_device_description
+    expected: |-
+      Protocol includes sections: Overview, Materials, Methods, Acceptance Criteria, Timeline, References.
+evaluators:
+  - name: Contains Overview section
+    string:
+      contains: "Overview"
+  - name: Contains References section
+    string:
+      contains: "References"
