--- a/study_director_prompts/02_audit_raw_data_capa_summary.prompt.yaml
+++ b/study_director_prompts/02_audit_raw_data_capa_summary.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Audit Raw Data and Draft a CAPA Summary
-description: Review study data for deviations and produce a corrective-action 
+description: Review study data for deviations and produce a corrective-action
   plan.
 model: gpt-4o
 modelParameters:
@@ -25,5 +25,17 @@ messages:
       Output Format:
       1. Markdown table with columns: Issue ID | Impact | CAPA
       2. CAPA memo addressed to the Study Director (≤300 words)
-testData: []
-evaluators: []
+testData:
+  - input: |
+      data_csv: |
+        id,weight
+        1,200
+        2,150
+        3,250
+    expected: |
+      | Issue ID | Impact | CAPA |
+      | 1 | Low | ... |
+evaluators:
+  - name: Includes CAPA memo
+    string:
+      contains: 'CAPA memo'
