Add testData and evaluator sections to trial execution prompts

--- a/trial_execution_prompts/01_protocol_optimization_risk_simulation.prompt.yaml
+++ b/trial_execution_prompts/01_protocol_optimization_risk_simulation.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Protocol Optimization and Risk Simulation
-description: Evaluate a draft clinical protocol and simulate the effects of 
+description: Evaluate a draft clinical protocol and simulate the effects of
   simplifying key elements.
 model: gpt-4o
 modelParameters:
@@ -28,5 +28,12 @@ messages:
       - **Section B:** Scenario 1 – metrics and narrative
       - **Section C:** Scenario 2 – metrics and narrative
       - **Section D:** Recommendations
-testData: []
-evaluators: []
+testData:
+  - input: |
+      Draft includes 12 visits and 50 inclusion criteria.
+    expected: |
+      Section A:
+evaluators:
+  - name: Includes recommendations section
+    string:
+      contains: "Section D:"
