--- a/trial_execution_prompts/02_ai_powered_site_recruitment.prompt.yaml
+++ b/trial_execution_prompts/02_ai_powered_site_recruitment.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: AI-Powered Site and Recruitment Strategy
-description: Select optimal sites and anticipate dropout risks using simulated 
+description: Select optimal sites and anticipate dropout risks using simulated
   EHR insights.
 model: gpt-4o
 modelParameters:
@@ -27,5 +27,13 @@ messages:
       - **Site Ranking Table** – site, enrollment projection, retention rate
       - **Dropout Risks** – list with explanations
       - **Mitigation Plan** – bullet points per risk
-testData: []
-evaluators: []
+testData:
+  - input: |
+      criteria: age 18-65
+      target_enrollment: 200
+    expected: |
+      Site Ranking Table
+evaluators:
+  - name: Lists mitigation strategies
+    string:
+      contains: "Mitigation Plan"
