--- a/trial_execution_prompts/07_recruitment_diversity_acceleration.prompt.yaml
+++ b/trial_execution_prompts/07_recruitment_diversity_acceleration.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Patient Recruitment and Diversity Acceleration Plan
-description: Boost enrollment and improve demographic diversity in a stalled 
+description: Boost enrollment and improve demographic diversity in a stalled
   Phase III study.
 model: gpt-4o
 modelParameters:
@@ -23,5 +23,12 @@ messages:
 
       Output Format:
       Concise report (≤ 1 000 words) plus a one‑slide KPI dashboard sketch in text form.
-testData: []
-evaluators: []
+testData:
+  - input: |
+      Create recovery plan.
+    expected: |
+      metrics dashboard
+evaluators:
+  - name: Includes ROI projection
+    string:
+      contains: "ROI"
