--- a/.github/workflows/yaml-validation.yml
+++ b/.github/workflows/yaml-validation.yml
@@ -20,6 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install yamllint
+        run: pip install yamllint
       - name: Validate prompts
         run: |
           ./scripts/validate_prompts.sh
