--- a/.github/workflows/fix-markdown-issues.yml
+++ b/.github/workflows/fix-markdown-issues.yml
@@ -15,6 +15,9 @@ on:
       - '.github/workflows/fix-markdown-issues.yml'
       - 'scripts/fix_markdown_issues.py'
 
+permissions:
+  contents: write
+
 jobs:
   autofix:
     runs-on: ubuntu-latest
@@ -43,7 +46,7 @@ jobs:
             echo "changed=1" >> "$GITHUB_OUTPUT"
           fi
       - name: Commit and push fixes
-        if: steps.diff.outputs.changed == '1'
+        if: github.event_name == 'push' && steps.diff.outputs.changed == '1'
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
