--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -12,6 +12,9 @@ on:
       - '**/*.prompt.yaml'
       - '**/*.prompt.yml'
 
+permissions:
+  contents: write
+
 jobs:
   update-docs:
     runs-on: ubuntu-latest
@@ -38,7 +41,7 @@ jobs:
             echo "changed=1" >> "$GITHUB_OUTPUT"
           fi
       - name: Commit and push changes
-        if: steps.diff.outputs.changed == '1'
+        if: github.event_name == 'push' && steps.diff.outputs.changed == '1'
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
