--- a/.github/workflows/repo-checks.yml
+++ b/.github/workflows/repo-checks.yml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+      - name: Install dependencies
+        run: pip install pyyaml
       - name: Run repository checks
         run: python3 scripts/check_prompts.py
       - name: Validate prompt schema
