--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -25,6 +25,8 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y yamllint
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Validate prompts
         run: ./tools/scripts/validate_prompt_schema.py
       - name: Build with Jekyll
